Add funcionality to search by Idea body

--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -16,7 +16,7 @@
 <form id="search-form">
   <fieldset>
     <legend>Search:</legend>
-    <input id="search_field" name="search" type="text" placeholder="Enter Text to search by Title or Body" size="35" /><br />
+    <input id="search" name="search" type="text" placeholder="Enter Text to search by Title or Body" size="35" /><br />
   </fieldset>
 </form><br>
 
